--- a/index.html
+++ b/index.html
@@ -10,23 +10,29 @@
 </head>
 <header><h1>CrystalsCollector</h1></header>
 <body>
-    <p> You will be given a random number at the start of the game.</p>
+    <div class="container">
+        <p> You will be given a random number at the start of the game.</p>
 
-    <p>There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total score.</p>
+        <p>There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total score.</p>
 
-    <p>You win the game by matching your total score to random number, you lose the game if your total score goes above the random number.</p>
+        <p>You win the game by matching your total score to random number, you lose the game if your total score goes above the random number.</p>
 
-    <p>The value of each crystal is hidden from you until you click on it.</p>
+        <p>The value of each crystal is hidden from you until you click on it.</p>
 
-    <p>Each time when the game starts, the game will change the values of each crystal.</p>
-
+        <p>Each time when the game starts, the game will change the values of each crystal.</p>
+    </div>
     <div id="result"></div>
+
+    <div class="score">
+            <div id="win">Win:</div>
+
+            <div id="lost">Lost:</div>
+    </div>
 
     <div id="previous">Previous:</div>
 
-    <div id="win">Win:</div>
-
-    <div id="lost">Lost:</div>
+    
+    
 
     <div class="crystals">
     </div>
